# The-Committee-of-Sudden-Wealth

./: .gitignore  CODEX.md  README.md  algo.py  prosperity_competition_research.md  prosperity_repo_strategy_mining.md  pyproject.toml
.agents/skills/prosperity-candidate-discovery/: SKILL.md
.agents/skills/prosperity-live-submission-review/: SKILL.md
.agents/skills/prosperity-manual-round-solver/: SKILL.md
docs/: baseline-snapshots.md  day0-intake.md  manual-round-log.md  round-open-checklist.md  strategy-iteration-log.md  trade-candidate-log.md
rounds/probes/: limit_probe.py  match_trade_probe.py  order_lifetime_probe.py
rounds/round2/: trader.py
rounds/tutorial/: trader.py
rounds/tutorial_round_1/: algo_original.py  datamodel.py  trader.py
scripts/: analyze_submission_log.py  decompose_backtest_trades.py  diff_backtest_trades.py  extract_submission_round_data.py  init_round_workspace.sh  init_trader_from_template.sh  open_visualizer.py  run_backtest_with_limit_overrides.py  run_first_practice_backtest.sh  run_mechanics_probes.py  run_official_tutorial_backtest.sh  run_official_tutorial_parameter_sweep.py  run_parameter_sweep.py  run_public_replay.sh  run_round2_practice_backtest.sh  run_tutorial_submission_sweep.py  setup_public_tooling.sh  sync_research_repos.sh
src/tcosw/: __init__.py  config.py  conversion.py  execution.py  fair_value.py  logging_utils.py  models.py  prosperity_logger.py  risk.py  runtime.py
templates/: trader.py
tests/: test_runtime_modules.py  test_strategy_scaffold.py  test_tutorial_round1_trader.py
(+24 files in other folders)
